# insect_body_length

./: calc_bl.py  pyproject.toml
input/annotation/: zv_001_001_61e86ab00caa22145f34004e.json  zv_001_002_61e86ac00caa22145f34004f.json
